--- a/en/presidents/index.html
+++ b/en/presidents/index.html
@@ -3,23 +3,22 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
-  <title>Presidential terms — Presidency Clock</title>
+  <title>Presidential Terms — Presidency Clock</title>
 
   <!-- Canonical + hreflang -->
   <link rel="canonical" href="https://presidencyclock.com/en/presidents/">
+  <link rel="alternate" hreflang="en" href="https://presidencyclock.com/en/presidents/">
   <link rel="alternate" hreflang="uk" href="https://presidencyclock.com/uk/presidents/">
   <link rel="alternate" hreflang="de" href="https://presidencyclock.com/de/presidents/">
   <link rel="alternate" hreflang="fr" href="https://presidencyclock.com/fr/presidents/">
   <link rel="alternate" hreflang="es" href="https://presidencyclock.com/es/presidents/">
-  <link rel="alternate" hreflang="en" href="https://presidencyclock.com/en/presidents/">
-  <link rel="alternate" hreflang="x-default" href="https://presidencyclock.com/en/presidents/">
 
   <!-- SEO -->
-  <meta name="description" content="The latest 5 leaders per country: Ukraine, USA, Canada (prime ministers), Spain (prime minister), Mexico, France. Start/end of term, duration in days and ≈ years, and the average term.">
+  <meta name="description" content="Last 5 leaders for: Ukraine, USA, Canada (Prime Ministers), Spain (President of the Government), Mexico, France. Start/end dates, days & ≈ years, and averages.">
   <meta property="og:url" content="https://presidencyclock.com/en/presidents/">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Presidential terms — Presidency Clock">
-  <meta property="og:description" content="Last 5 officeholders per country with term durations and averages.">
+  <meta property="og:title" content="Presidential Terms — Presidency Clock">
+  <meta property="og:description" content="The last 5 leaders per country with term durations and averages.">
   <meta property="og:image" content="https://presidencyclock.com/og.jpg">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
@@ -27,8 +26,8 @@
   <meta property="og:locale" content="en_US">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:image" content="https://presidencyclock.com/og.jpg">
-  <meta name="twitter:title" content="Presidential terms — Presidency Clock">
-  <meta name="twitter:description" content="Start/end of terms, days and years, average durations.">
+  <meta name="twitter:title" content="Presidential Terms — Presidency Clock">
+  <meta name="twitter:description" content="Start/end dates, days & ≈ years, and averages.">
 
   <!-- AdSense -->
   <meta name="google-adsense-account" content="ca-pub-5023415479696725">
@@ -65,40 +64,21 @@
       background-attachment:fixed,fixed,fixed;
       padding-bottom:var(--safe-bottom);
     }
-
-    /* ===== Brand (fixed logo) — NO overlay on menu ===== */
-    .brand{
-      position: fixed;
-      left: calc(12px + var(--safe-left));
-      top: calc(8px + var(--safe-top));
-      z-index: 10;                 /* below the menu */
-      display: inline-flex;         /* fit to content width */
-      align-items: center;
-      gap: .5rem;
-      width: auto;
-      pointer-events: none;         /* this container doesn't intercept clicks */
-    }
-    .brand__link, .brand__text{ pointer-events: auto; } /* inner elements still clickable */
-
+    .brand{position:fixed;left:calc(12px + var(--safe-left));top:calc(8px + var(--safe-top));z-index:20;display:flex;align-items:center;gap:.5rem}
     .brand__link{display:inline-flex;align-items:center;justify-content:center;width:32px;height:32px;border-radius:8px;background:var(--surface);border:1px solid var(--line);text-decoration:none;color:var(--text);box-shadow:0 2px 10px rgba(0,0,0,.06)}
     .brand__icon{width:22px;height:22px;display:block;color:var(--text)}
     .brand__text{font-weight:800;letter-spacing:.01em;user-select:none;font-size:14px}
 
-    .wrap{max-width:1100px;margin:calc(56px + var(--safe-top)) auto 28px;padding:0 14px}
-
+    .wrap{max-width:1100px;margin:calc(26px + var(--safe-top)) auto 28px;padding:0 14px}
     h1{font-weight:800;letter-spacing:.01em;text-align:center;margin:6px 0 4px;font-size:clamp(20px,4.6vw,40px);line-height:1.06}
     .subtitle{text-align:center;opacity:.9;margin-bottom:10px;font-weight:600;font-size:clamp(12px,2.6vw,15px)}
 
-    /* Top navigation */
-    .topnav{
-      position: relative;           /* enables z-index */
-      z-index: 50;                  /* above brand and backgrounds */
-      display:flex;gap:.75rem;justify-content:center;flex-wrap:wrap;margin:12px auto
-    }
+    /* Top site menu */
+    .topnav{display:flex;gap:.75rem;justify-content:center;flex-wrap:wrap;margin:12px auto}
     .topnav a{color:var(--accent);text-decoration:none;font-weight:700}
     .topnav a:hover{text-decoration:underline}
 
-    /* In-page anchors (countries) */
+    /* In-section menu (anchor links to countries) */
     .nav{display:flex;gap:.5rem;justify-content:center;flex-wrap:wrap;margin:8px auto 12px}
     .nav a{color:var(--accent);text-decoration:none;font-weight:700}
     .nav a:hover{text-decoration:underline}
@@ -121,33 +101,33 @@
 
     @media (max-width:720px){
       .brand__text{display:none}
-      .wrap{margin:calc(50px + var(--safe-top)) auto 18px}
+      .wrap{margin:calc(22px + var(--safe-top)) auto 18px}
       th,td{padding:7px}
     }
   </style>
 </head>
 <body>
   <!-- brand -->
-  <div class="brand" aria-hidden="false">
+  <div class="brand">
     <a class="brand__link" href="/en/" aria-label="Presidency Clock">
       <svg class="brand__icon" viewBox="0 0 32 32" aria-hidden="true"><g fill="none" stroke="currentColor" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round"><circle cx="16" cy="16" r="12"></circle><path d="M16 8v8l6 4"></path></g></svg>
     </a>
-    <span class="brand__text">Presidency&nbsp;Clock</span>
+    <span class="brand__text" aria-hidden="true">Presidency&nbsp;Clock</span>
   </div>
 
   <div class="wrap">
-    <!-- Unified top menu (now definitely clickable) -->
+    <!-- Single top site menu (EN paths) -->
     <nav class="topnav" aria-label="Main menu">
       <a href="/en/">Home</a>
       <a href="/en/about/">About</a>
-      <a href="/en/presidents/">Presidential terms</a>
+      <a href="/en/presidents/">Presidential Terms</a>
       <a href="/en/digest/">Digests</a>
       <a href="/en/privacy/">Privacy Policy</a>
-      <a href="/en/contacts/">Contacts</a>
+      <a href="/en/contacts/">Contact</a>
     </nav>
 
-    <h1>Presidential terms</h1>
-    <div class="subtitle">Latest 5 leaders per country. We show <b>start</b> and <b>end</b> of term, <b>days</b> and <b>≈ years</b>. Tables are sorted by duration (shortest first).</div>
+    <h1>Presidential Terms</h1>
+    <div class="subtitle">Last 5 leaders per country. We show <b>start</b> and <b>end</b> of term, <b>days</b> and <b>≈ years</b>. Tables are sorted by duration (shortest first).</div>
 
     <!-- ads top -->
     <div class="ad ad--top">
@@ -156,7 +136,7 @@
            data-ad-slot="9877072514" data-ad-format="auto" data-full-width-responsive="true"></ins>
     </div>
 
-    <!-- Countries anchor menu -->
+    <!-- In-page country anchors -->
     <div class="nav" aria-label="Countries">
       <a href="#ua">Ukraine</a>
       <a href="#us">USA</a>
@@ -178,7 +158,7 @@
     <div class="footer">
       <a href="/en/privacy/">Privacy Policy</a> •
       <a href="/en/about/">About</a> •
-      <a href="/en/contacts/">Contacts</a>
+      <a href="/en/contacts/">Contact</a>
     </div>
   </div>
 
@@ -206,7 +186,7 @@
   const DATA = {
     ua: {
       title: 'Ukraine',
-      note: 'Elected presidents (acting heads excluded).',
+      note: 'Elected presidents (excluding “acting”).',
       leaders: [
         {name:'Volodymyr Zelenskyy', start:'2019-05-20', end:null},
         {name:'Petro Poroshenko',    start:'2014-06-07', end:'2019-05-20'},
@@ -217,7 +197,7 @@
     },
     us: {
       title: 'USA',
-      note: 'If a leader served two non-consecutive terms, we show separate rows.',
+      note: 'If a leader had two non-consecutive terms, we show them in separate rows.',
       leaders: [
         {name:'Donald Trump (2nd term)', start:'2025-01-20', end:null},
         {name:'Joe Biden',               start:'2021-01-20', end:'2025-01-20'},
@@ -228,7 +208,7 @@
     },
     ca: {
       title: 'Canada',
-      note: 'Prime ministers (head of government).',
+      note: 'Prime Ministers (heads of government).',
       leaders: [
         {name:'Justin Trudeau',  start:'2015-11-04', end:null},
         {name:'Stephen Harper',  start:'2006-02-06', end:'2015-11-04'},
@@ -239,24 +219,24 @@
     },
     es: {
       title: 'Spain',
-      note: 'Prime Minister (President of the Government).',
+      note: '“President of the Government” (head of government).',
       leaders: [
-        {name:'Pedro Sánchez',              start:'2018-06-02', end:null},
-        {name:'Mariano Rajoy',              start:'2011-12-21', end:'2018-06-01'},
+        {name:'Pedro Sánchez',                start:'2018-06-02', end:null},
+        {name:'Mariano Rajoy',                start:'2011-12-21', end:'2018-06-01'},
         {name:'José Luis Rodríguez Zapatero', start:'2004-04-17', end:'2011-12-21'},
-        {name:'José María Aznar',           start:'1996-05-05', end:'2004-04-17'},
-        {name:'Felipe González',            start:'1982-12-02', end:'1996-05-05'}
+        {name:'José María Aznar',             start:'1996-05-05', end:'2004-04-17'},
+        {name:'Felipe González',              start:'1982-12-02', end:'1996-05-05'}
       ]
     },
     mx: {
       title: 'Mexico',
       note: 'President of the Republic.',
       leaders: [
-        {name:'Claudia Sheinbaum',             start:'2024-10-01', end:null},
-        {name:'Andrés Manuel López Obrador',   start:'2018-12-01', end:'2024-09-30'},
-        {name:'Enrique Peña Nieto',            start:'2012-12-01', end:'2018-11-30'},
-        {name:'Felipe Calderón',               start:'2006-12-01', end:'2012-11-30'},
-        {name:'Vicente Fox',                   start:'2000-12-01', end:'2006-11-30'}
+        {name:'Claudia Sheinbaum',            start:'2024-10-01', end:null},
+        {name:'Andrés Manuel López Obrador',  start:'2018-12-01', end:'2024-09-30'},
+        {name:'Enrique Peña Nieto',           start:'2012-12-01', end:'2018-11-30'},
+        {name:'Felipe Calderón',              start:'2006-12-01', end:'2012-11-30'},
+        {name:'Vicente Fox',                  start:'2000-12-01', end:'2006-11-30'}
       ]
     },
     fr: {
@@ -272,11 +252,11 @@
     }
   };
 
-  /* ====== UTIL ====== */
+  /* ====== UTILS ====== */
   const fmt = (d)=>d?new Date(d).toLocaleDateString('en-US',{year:'numeric',month:'2-digit',day:'2-digit'}):'—';
   function diffDays(a,b){
     const A=new Date(a), B=b?new Date(b):new Date();
-    // normalize to noon to avoid TZ edge cases
+    // normalize to noon to avoid TZ drift
     A.setHours(12,0,0,0); B.setHours(12,0,0,0);
     return Math.max(0, Math.round((B-A)/86400000));
   }
@@ -312,14 +292,14 @@
       tr.innerHTML = `
         <td>${r.name}</td>
         <td>${fmt(r.start)}</td>
-        <td>${r.end?fmt(r.end):'<small>incumbent</small>'}</td>
+        <td>${r.end?fmt(r.end):'<small>ongoing</small>'}</td>
         <td>${r.days.toLocaleString('en-US')}</td>
         <td>${r.yrs}</td>
       `;
       tb.appendChild(tr);
     });
 
-    // average term
+    // Average term
     const avgDays = Math.round(rows.reduce((s,x)=>s+x.days,0)/rows.length);
     const avg = document.createElement('div');
     avg.style.margin='8px 0 2px';
